@@ -2,10 +2,7 @@ package br.com.lett.crawlernode.crawlers.corecontent.brasil;
 
 import br.com.lett.crawlernode.core.fetcher.models.Request;
 import br.com.lett.crawlernode.core.fetcher.models.Response;
-import br.com.lett.crawlernode.core.models.Card;
-import br.com.lett.crawlernode.core.models.CategoryCollection;
-import br.com.lett.crawlernode.core.models.Product;
-import br.com.lett.crawlernode.core.models.ProductBuilder;
+import br.com.lett.crawlernode.core.models.*;
 import br.com.lett.crawlernode.core.session.Session;
 import br.com.lett.crawlernode.core.task.impl.Crawler;
 import br.com.lett.crawlernode.util.CrawlerUtils;
@@ -28,9 +25,12 @@ import java.util.*;
 public class BrasilGimbaCrawler extends Crawler {
 
    private final String HOME_PAGE = "https://www.gimba.com.br/";
+   private final Set<String> cards = Sets.newHashSet(Card.VISA.toString(), Card.MASTERCARD.toString(),
+      Card.ELO.toString(), Card.DINERS.toString(), Card.AMEX.toString());
 
    public BrasilGimbaCrawler(Session session) {
       super(session);
+      super.config.setParser(Parser.HTML);
    }
 
    @Override
@@ -40,12 +40,11 @@ public class BrasilGimbaCrawler extends Crawler {
    }
 
    @Override
-   protected Object fetch() {
+   protected Response fetchResponse() {
       Request request = Request.RequestBuilder.create().setCookies(cookies).setUrl(session.getOriginalURL()).build();
       Response response = dataFetcher.get(session, request);
       cookies.addAll(response.getCookies());
-      String html = response.getBody();
-      return Jsoup.parse(html);
+      return response;
    }
 
 
@@ -54,31 +53,27 @@ public class BrasilGimbaCrawler extends Crawler {
       super.extractInformation(doc);
       List<Product> products = new ArrayList<>();
 
-      if (doc.selectFirst("#produtoCadastro") != null) {
+      if (doc.selectFirst(".pdp-product-title") != null) {
          Logging.printLogDebug(logger, session, "Product page identified: " + this.session.getOriginalURL());
 
-         String internalId = CrawlerUtils.scrapStringSimpleInfo(doc, "#codigoProduto p", true);
-         String name = CrawlerUtils.scrapStringSimpleInfo(doc, ".produto-nome", false);
-         boolean available = doc.selectFirst("#botao-comprar .btn-add-new") != null;
-         CategoryCollection categories = CrawlerUtils.crawlCategories(doc, "#breadCrumb div a");
-         String primaryImage = CrawlerUtils.scrapSimplePrimaryImage(doc, ".main-thumb a", Arrays.asList("href"), "https:", "www.gimba.com.br");
-         String secondaryImages = CrawlerUtils.scrapSimpleSecondaryImages(doc, "#thumb a", Arrays.asList("href"), "https:", "www.gimba.com.br", primaryImage);
-
+         String internalId = scrapInternalId(doc);
+         String name = CrawlerUtils.scrapStringSimpleInfo(doc, ".pdp-product-title", true);
+         boolean available = doc.selectFirst(".pdp-produto-indisponivel-form") == null;
+         CategoryCollection categories = CrawlerUtils.crawlCategories(doc, ".breadcrumb-item");
+         List<String> images = CrawlerUtils.scrapSecondaryImages(doc, ".pdp-galeria img", List.of("src"), "https", "images.gimba.com.br", null);
+         String primaryImage = images.remove(0);
          Offers offers = available ? scrapOffer(doc) : new Offers();
 
          String description = scrapDescription(doc);
 
-         // Creating the product
          Product product = ProductBuilder.create()
             .setUrl(session.getOriginalURL())
             .setInternalId(internalId)
             .setInternalPid(internalId)
             .setName(name)
-            .setCategory1(categories.getCategory(0))
-            .setCategory2(categories.getCategory(1))
-            .setCategory3(categories.getCategory(2))
+            .setCategories(categories)
             .setPrimaryImage(primaryImage)
-            .setSecondaryImages(secondaryImages)
+            .setSecondaryImages(images)
             .setOffers(offers)
             .setDescription(description)
             .build();
@@ -91,10 +86,18 @@ public class BrasilGimbaCrawler extends Crawler {
       return products;
    }
 
+   private String scrapInternalId(Document doc) {
+      String internalId = CrawlerUtils.scrapStringSimpleInfo(doc, ".pdp-product-infos-list > li:first-child", false);
+      if (internalId != null && !internalId.isEmpty()) {
+         return internalId.replaceAll("[^0-9]", "");
+      }
+      return null;
+   }
+
    private String scrapDescription(Document doc) {
       String description = "";
       String verificationToken = CrawlerUtils.scrapStringSimpleInfoByAttribute(doc, "[name=__RequestVerificationToken]", "value");
-      String pid = CrawlerUtils.scrapStringSimpleInfoByAttribute(doc,"form#frm-produto  [id=hidProduto]","value");
+      String pid = CrawlerUtils.scrapStringSimpleInfoByAttribute(doc, "form#frm-produto  [id=hidProduto]", "value");
 
       if (verificationToken != null && pid != null) {
          String url = "https://www.gimba.com.br/produtos/JsonRetornaProdutoDetalhe?id=" + pid + "&kit=false";
@@ -127,15 +130,14 @@ public class BrasilGimbaCrawler extends Crawler {
             description = CrawlerUtils.scrapStringSimpleInfo(document, ".fonte-descricao-prod dd", false);
          }
       }
-      
+
       return description;
    }
-
 
    private Offers scrapOffer(Document doc) throws OfferException, MalformedPricingException {
       Offers offers = new Offers();
       Pricing pricing = scrapPricing(doc);
-      List<String> sales = new ArrayList<>();
+      List<String> sales = Collections.singletonList(CrawlerUtils.calculateSales(pricing));
 
       offers.add(Offer.OfferBuilder.create()
          .setUseSlugNameAsInternalSellerId(true)
@@ -148,15 +150,17 @@ public class BrasilGimbaCrawler extends Crawler {
          .build());
 
       return offers;
-
    }
 
    private Pricing scrapPricing(Document doc) throws MalformedPricingException {
-      Double priceFrom = CrawlerUtils.scrapDoublePriceFromHtml(doc, "#valores-dados #valores-dados-preco-de", null, false, ',', session);
-      Double spotlightPrice = CrawlerUtils.scrapDoublePriceFromHtml(doc, "#valores-dados-preco-por-valor", null, false, ',', session);
-      CreditCards creditCards = scrapCreditCards(doc, spotlightPrice);
-      Double bankSlipValue = CrawlerUtils.scrapDoublePriceFromHtml(doc, "#boleto-estrutura strong", null, false, ',', session);
+      Double priceFrom = CrawlerUtils.scrapDoublePriceFromHtml(doc, ".pdp-valores .pdp-valor-antigo", null, true, ',', session);
+      Double spotlightPrice = CrawlerUtils.scrapDoublePriceFromHtml(doc, ".pdp-valores .pdp-valor-atual", null, true, ',', session);
+      Double bankSlipValue = CrawlerUtils.scrapDoublePriceFromHtml(doc, ".pdp-valores > small > strong", null, true, ',', session);
       BankSlip bankSlip = CrawlerUtils.setBankSlipOffers(bankSlipValue, null);
+
+      CreditCards creditCards = CrawlerUtils.scrapCreditCards(spotlightPrice, cards);
+
+      if (priceFrom == spotlightPrice) priceFrom = null;
 
       return Pricing.PricingBuilder.create()
          .setPriceFrom(priceFrom)
@@ -164,59 +168,5 @@ public class BrasilGimbaCrawler extends Crawler {
          .setCreditCards(creditCards)
          .setBankSlip(bankSlip)
          .build();
-
-
    }
-
-   private CreditCards scrapCreditCards(Document doc, Double spotlightPrice) throws MalformedPricingException {
-      CreditCards creditCards = new CreditCards();
-      Set<String> cards = Sets.newHashSet(Card.VISA.toString(), Card.MASTERCARD.toString(),
-         Card.AURA.toString(), Card.DINERS.toString(), Card.HIPER.toString(), Card.AMEX.toString());
-
-      Installments installments = scrapInstallments(doc);
-      if (installments.getInstallments().isEmpty()) {
-         installments.add(Installment.InstallmentBuilder.create()
-            .setInstallmentNumber(1)
-            .setInstallmentPrice(spotlightPrice)
-            .build());
-      }
-
-      for (String card : cards) {
-         creditCards.add(CreditCard.CreditCardBuilder.create()
-            .setBrand(card)
-            .setInstallments(installments)
-            .setIsShopCard(false)
-            .build());
-      }
-
-      return creditCards;
-   }
-
-   public Installments scrapInstallments(Document doc) throws MalformedPricingException {
-      Installments installments = new Installments();
-
-      Element installmentsElement = doc.selectFirst("#valores-dados-preco-parcelamento");
-
-      if (installmentsElement != null) {
-         String installmentTxt = installmentsElement.text();
-
-         if (installmentTxt.contains("de")) {
-
-            String installmentString = installmentTxt.split("de")[0];
-            int installment = installmentString != null ? MathUtils.parseInt(installmentString) : null;
-
-            String valueString = installmentTxt.split("de")[1];
-            Double value = valueString != null ? MathUtils.parseDoubleWithComma(valueString) : null;
-
-            installments.add(Installment.InstallmentBuilder.create()
-               .setInstallmentNumber(installment)
-               .setInstallmentPrice(value)
-               .build());
-         }
-      }
-
-
-      return installments;
-   }
-
 }
